--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -32,6 +32,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="Atacar">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>230</x>
@@ -45,6 +48,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="Huir">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>430</x>
@@ -71,9 +77,9 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>350</y>
+      <y>320</y>
       <width>331</width>
-      <height>231</height>
+      <height>261</height>
      </rect>
     </property>
     <property name="text">
