--- a/fondo.qrc
+++ b/fondo.qrc
@@ -15,5 +15,6 @@
         <file>hechizo.png</file>
         <file>lilith.png</file>
         <file>slime.png</file>
+        <file>huevo.png</file>
     </qresource>
 </RCC>
